--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@reach/router": "1.2.1",
     "axios": "0.18.0",
     "contentful": "7.0.5",
+    "default-passive-events": "^1.0.10",
+    "googleapis": "^37.1.0",
     "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-dom": "16.6.3",
