--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-dom": "16.6.3",
+    "react-gtm-module": "^2.0.2",
     "react-hot-loader": "4.6.3",
     "react-icons": "3.2.2",
     "react-markdown": "4.0.4",
