--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-loader": "4.6.3",
     "react-icons": "3.2.2",
     "react-markdown": "4.0.4",
+    "react-player": "^1.9.3",
     "react-pose": "4.0.4",
     "react-reveal": "1.2.2",
     "react-slick": "0.23.2",
