--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@reach/router": "1.2.1",
+    "acorn": "^6.1.0",
     "axios": "0.18.0",
     "contentful": "7.0.5",
-    "default-passive-events": "^1.0.10",
     "dotenv": "^6.2.0",
     "googleapis": "^37.1.0",
     "prop-types": "15.6.2",
-    "react": "16.6.3",
-    "react-dom": "16.6.3",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
     "react-gtm-module": "^2.0.2",
     "react-hot-loader": "4.6.3",
     "react-icons": "3.2.2",
@@ -27,8 +27,7 @@
     "react-pose": "4.0.4",
     "react-reveal": "1.2.2",
     "react-slick": "0.23.2",
-    "react-static": "6.3.0",
-    "react-static-plugin-google-analytics": "0.0.0",
+    "react-static": "6.3.6",
     "react-static-plugin-styled-components": "6.0.8",
     "react-youtube": "^7.9.0",
     "sanitize.css": "8.0.0",
@@ -36,7 +35,6 @@
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.10.0",
     "eslint-config-react-tools": "1.x.x",
     "prettier": "1.15.3",
     "serve": "10.1.1"
