too many things

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "contentful": "7.0.5",
     "dotenv": "^6.2.0",
     "googleapis": "^37.1.0",
+    "moment": "^2.24.0",
     "prop-types": "15.6.2",
     "react": "16.8.1",
     "react-dom": "16.8.1",
     "react-gtm-module": "^2.0.2",
     "react-hot-loader": "4.6.3",
     "react-icons": "3.2.2",
+    "react-mailchimp-form": "^1.0.1",
+    "react-mailchimp-subscribe": "^2.1.0",
     "react-markdown": "4.0.4",
     "react-player": "^1.9.3",
     "react-pose": "4.0.4",
