--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "15.6.2",
     "react": "16.8.1",
     "react-dom": "16.8.1",
+    "react-ga": "^2.5.7",
     "react-gtm-module": "^2.0.2",
     "react-hot-loader": "4.6.3",
     "react-icons": "3.2.2",
