home hero redesign

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@reach/router": "1.2.1",
     "acorn": "^6.1.0",
     "axios": "0.18.0",
+    "babel-plugin-polished": "^1.1.0",
     "contentful": "7.0.5",
     "dotenv": "^6.2.0",
     "googleapis": "^37.1.0",
     "moment": "^2.24.0",
+    "polished": "^3.0.3",
     "prop-types": "15.6.2",
     "react": "16.8.1",
     "react-dom": "16.8.1",
