--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
   "name": "afov-react",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "main": "index.js",
   "scripts": {
     "start": "react-static start",
     "stage": "react-static build --staging",
     "build": "react-static build",
     "serve": "serve dist -p 3000",
+    "analyze": "react-static build --analyze",
     "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
     "@reach/router": "1.2.1",
-    "acorn": "^6.1.0",
     "axios": "0.18.0",
-    "babel-plugin-polished": "^1.1.0",
-    "contentful": "7.0.5",
-    "dotenv": "^6.2.0",
-    "googleapis": "^37.1.0",
-    "moment": "^2.24.0",
-    "polished": "^3.0.3",
+    "babel-plugin-polished": "1.1.0",
+    "contentful": "7.6.0",
+    "dotenv": "8.0.0",
+    "googleapis": "40.0.0",
+    "moment": "2.24.0",
+    "polished": "3.4.0",
     "prop-types": "15.6.2",
-    "react": "16.8.1",
-    "react-dom": "16.8.1",
-    "react-ga": "^2.5.7",
-    "react-gtm-module": "^2.0.2",
-    "react-hot-loader": "4.6.3",
-    "react-icons": "3.2.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-icons": "3.7.0",
     "react-mailchimp-subscribe": "^2.1.0",
-    "react-markdown": "4.0.4",
+    "react-markdown": "4.0.8",
     "react-player": "^1.9.3",
-    "react-pose": "4.0.4",
+    "react-pose": "4.0.8",
     "react-reveal": "1.2.2",
-    "react-slick": "0.23.2",
-    "react-static": "6.3.6",
-    "react-static-plugin-styled-components": "6.0.8",
+    "react-slick": "0.24.0",
+    "react-static": "7.0.10",
+    "react-static-plugin-reach-router": "7.0.10",
+    "react-static-plugin-sitemap": "7.0.10",
+    "react-static-plugin-styled-components": "7.0.10",
     "react-youtube": "^7.9.0",
-    "sanitize.css": "8.0.0",
-    "styled-components": "4.1.3",
+    "sanitize.css": "9.0.0",
+    "styled-components": "4.2.1",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
