--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "afov-react",
   "version": "2.1.0",
-  "main": "index.js",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kirklikecaptain/afov-react"
+  },
   "scripts": {
     "start": "react-static start",
     "stage": "react-static build --staging",
@@ -12,7 +16,7 @@
   },
   "dependencies": {
     "@reach/router": "1.2.1",
-    "axios": "0.18.0",
+    "axios": "0.19.0",
     "babel-plugin-polished": "1.1.0",
     "contentful": "7.6.0",
     "dotenv": "8.0.0",
@@ -23,24 +27,22 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-icons": "3.7.0",
-    "react-mailchimp-subscribe": "^2.1.0",
+    "react-mailchimp-subscribe": "2.1.0",
     "react-markdown": "4.0.8",
-    "react-player": "^1.9.3",
     "react-pose": "4.0.8",
     "react-reveal": "1.2.2",
     "react-slick": "0.24.0",
-    "react-static": "7.0.10",
+    "react-static": "7.1.0",
     "react-static-plugin-reach-router": "7.0.10",
     "react-static-plugin-sitemap": "7.0.10",
     "react-static-plugin-styled-components": "7.0.10",
-    "react-youtube": "^7.9.0",
-    "sanitize.css": "9.0.0",
+    "sanitize.css": "10.0.0",
     "styled-components": "4.2.1",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
     "prettier": "1.15.3",
-    "serve": "10.1.1"
+    "serve": "^11.0.2"
   }
 }
